--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -43,5 +43,355 @@
     "footer_subscribe_text": "特別オファー、無料プレゼント、一生に一度の取引を入手するために登録してください。",
     "footer_email_placeholder": "メールアドレスを入力",
     "footer_join": "参加する",
+    "policies": {
+        "refund": {
+            "title": "返品・返金ポリシー",
+            "sections": [
+                {
+                    "title": "返品について",
+                    "content": [
+                        "商品到着後7日以内にご連絡いただいた場合のみ、返品を受け付けます",
+                        "返品可能な商品は未開封のものに限ります",
+                        "開封済みの商品は返品をお受けできません",
+                        "返品時の送料はお客様負担となります"
+                    ]
+                },
+                {
+                    "title": "返品できない場合",
+                    "content": [
+                        "商品到着後8日以上経過した場合",
+                        "商品を開封・使用した場合",
+                        "お客様の責任により商品が破損・汚損した場合",
+                        "セール品や特価品（返品不可と明記されている商品）"
+                    ]
+                },
+                {
+                    "title": "返金について",
+                    "content": [
+                        "返品商品を確認後、7営業日以内に返金処理を行います",
+                        "返金額は商品の状態により判断します",
+                        "未開封で問題がない場合は全額返金します",
+                        "商品に問題がある場合は状況に応じて一部返金となる場合があります",
+                        "返金は元の決済方法と同じ方法で行います"
+                    ]
+                },
+                {
+                    "title": "不良品・破損品の場合",
+                    "content": [
+                        "商品到着時に破損や不良があった場合は、商品到着後7日以内にご連絡ください",
+                        "不良品・破損品の場合は返品送料を当店が負担します",
+                        "交換または全額返金で対応します"
+                    ]
+                },
+                {
+                    "title": "返品手続き",
+                    "content": [
+                        "japan.anime.shoten@gmail.com までご連絡ください",
+                        "注文番号、商品名、返品理由を記載してください",
+                        "返品先住所をお知らせします",
+                        "商品を返送してください"
+                    ]
+                }
+            ]
+        },
+        "shipping": {
+            "title": "配送ポリシー",
+            "sections": [
+                {
+                    "title": "配送方法",
+                    "content": [
+                        "日本郵便の国際eパケットライトを主に使用します",
+                        "一部商品はEMS（国際スピード郵便）で発送します",
+                        "すべての商品に追跡番号が付きます"
+                    ]
+                },
+                {
+                    "title": "配送期間",
+                    "content": [
+                        "注文確定後、5-7営業日以内に発送します",
+                        "発送後、お届けまで通常7-16日かかります",
+                        "配送先の国や地域により前後する場合があります",
+                        "繁忙期や税関検査により遅延する場合があります"
+                    ]
+                },
+                {
+                    "title": "追跡番号",
+                    "content": [
+                        "発送後、追跡番号をメールでお知らせします",
+                        "日本郵便の追跡サービスで配送状況を確認できます",
+                        "配送先国の郵便局でも追跡可能です"
+                    ]
+                },
+                {
+                    "title": "配送料",
+                    "content": [
+                        "すべての商品価格に配送料が含まれています",
+                        "チェックアウト時の配送料は0円と表示されます"
+                    ]
+                },
+                {
+                    "title": "配送先",
+                    "content": [
+                        "現在、以下の国・地域へ配送しています",
+                        "アメリカ、カナダ、イギリス、フランス、ドイツ、イタリア、スペイン",
+                        "台湾、中国、韓国、タイ、シンガポール",
+                        "その他の国への配送はお問い合わせください"
+                    ]
+                },
+                {
+                    "title": "関税・輸入税",
+                    "content": [
+                        "配送先の国により関税や輸入税が発生する場合があります",
+                        "関税・輸入税はお客様負担となります",
+                        "各国の税関規定により金額が異なります"
+                    ]
+                },
+                {
+                    "title": "配送できない場合",
+                    "content": [
+                        "住所不明や受取拒否の場合、商品は当店に返送されます",
+                        "返送後の再発送には追加送料が必要です",
+                        "長期不在による返送の場合も同様です"
+                    ]
+                },
+                {
+                    "title": "配送に関する問い合わせ",
+                    "content": [
+                        "japan.anime.shoten@gmail.com までご連絡ください",
+                        "追跡番号と注文番号を記載してください"
+                    ]
+                }
+            ]
+        },
+        "privacy": {
+            "title": "プライバシーポリシー",
+            "sections": [
+                {
+                    "title": "個人情報の収集",
+                    "content": [
+                        "当店では以下の個人情報を収集します",
+                        "氏名、メールアドレス、配送先住所、電話番号",
+                        "注文履歴、決済情報",
+                        "これらは注文処理と配送のためにのみ使用します"
+                    ]
+                },
+                {
+                    "title": "個人情報の利用目的",
+                    "content": [
+                        "商品の発送と配送",
+                        "注文内容の確認と通知",
+                        "お問い合わせへの対応",
+                        "サービス向上のための分析（統計データとして）"
+                    ]
+                },
+                {
+                    "title": "個人情報の第三者提供",
+                    "content": [
+                        "配送業者（日本郵便）に配送に必要な情報を提供します",
+                        "決済代行会社（Shopify）に決済処理のための情報を提供します",
+                        "法律で義務付けられている場合を除き、第三者に提供しません"
+                    ]
+                },
+                {
+                    "title": "個人情報の保護",
+                    "content": [
+                        "適切なセキュリティ対策を実施しています",
+                        "SSL暗号化通信を使用しています",
+                        "不正アクセス、紛失、破壊、改ざんを防止します"
+                    ]
+                },
+                {
+                    "title": "Cookie（クッキー）の使用",
+                    "content": [
+                        "サイト機能の改善のためにCookieを使用します",
+                        "ブラウザ設定でCookieを無効にできます",
+                        "無効にすると一部機能が使用できない場合があります"
+                    ]
+                },
+                {
+                    "title": "個人情報の開示・訂正・削除",
+                    "content": [
+                        "ご自身の個人情報の開示を希望される場合はご連絡ください",
+                        "訂正や削除を希望される場合も対応します",
+                        "japan.anime.shoten@gmail.com までご連絡ください"
+                    ]
+                },
+                {
+                    "title": "プライバシーポリシーの変更",
+                    "content": [
+                        "本ポリシーは予告なく変更する場合があります",
+                        "変更後はウェブサイトに掲載します"
+                    ]
+                }
+            ]
+        },
+        "terms": {
+            "title": "利用規約",
+            "sections": [
+                {
+                    "title": "サービスの利用",
+                    "content": [
+                        "当サイトを利用する際は本規約に同意したものとみなします",
+                        "未成年者は保護者の同意が必要です",
+                        "虚偽の情報を登録することは禁止します"
+                    ]
+                },
+                {
+                    "title": "商品について",
+                    "content": [
+                        "すべての商品は正規品です",
+                        "商品画像は実物と色合いが異なる場合があります",
+                        "商品の仕様は予告なく変更される場合があります",
+                        "在庫状況により注文をキャンセルさせていただく場合があります"
+                    ]
+                },
+                {
+                    "title": "価格と支払い",
+                    "content": [
+                        "表示価格にはすべての費用（商品代金・送料）が含まれています",
+                        "価格は予告なく変更する場合があります",
+                        "決済はShopifyの決済システムを使用します",
+                        "クレジットカード、PayPal等が利用可能です"
+                    ]
+                },
+                {
+                    "title": "注文のキャンセル",
+                    "content": [
+                        "発送前であれば注文のキャンセルが可能です",
+                        "japan.anime.shoten@gmail.com までご連絡ください",
+                        "発送後のキャンセルはできません",
+                        "返品ポリシーに従って返品手続きをしてください"
+                    ]
+                },
+                {
+                    "title": "禁止事項",
+                    "content": [
+                        "虚偽の情報を使用した注文",
+                        "他のお客様や当店に迷惑をかける行為",
+                        "法令に違反する行為",
+                        "これらに該当する場合、注文をキャンセルする場合があります"
+                    ]
+                },
+                {
+                    "title": "免責事項",
+                    "content": [
+                        "配送遅延による責任は負いません",
+                        "税関での没収や破損については責任を負いません",
+                        "お客様の環境により商品が正常に動作しない場合があります",
+                        "天災や不可抗力による損害については責任を負いません"
+                    ]
+                },
+                {
+                    "title": "知的財産権",
+                    "content": [
+                        "当サイトのコンテンツの著作権は当店または権利者に帰属します",
+                        "無断での転載、複製、改変は禁止します",
+                        "商品画像の無断使用も禁止します"
+                    ]
+                },
+                {
+                    "title": "準拠法と管轄裁判所",
+                    "content": [
+                        "本規約は日本法に準拠します",
+                        "紛争が生じた場合は大阪地方裁判所を専属的合意管轄裁判所とします"
+                    ]
+                },
+                {
+                    "title": "規約の変更",
+                    "content": [
+                        "本規約は予告なく変更する場合があります",
+                        "変更後はウェブサイトに掲載します",
+                        "変更後の利用は新規約に同意したものとみなします"
+                    ]
+                },
+                {
+                    "title": "お問い合わせ",
+                    "content": [
+                        "ご不明な点は japan.anime.shoten@gmail.com までご連絡ください"
+                    ]
+                }
+            ]
+        },
+        "legal": {
+            "title": "特定商取引法に基づく表記",
+            "sections": [
+                {
+                    "title": "販売業者",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "運営責任者",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "所在地",
+                    "content": [
+                        "大阪府大阪市",
+                        "詳細な住所は請求があった場合に遅滞なく開示します"
+                    ]
+                },
+                {
+                    "title": "お問い合わせ",
+                    "content": [
+                        "メールアドレス: japan.anime.shoten@gmail.com",
+                        "営業時間: 平日 10:00-18:00",
+                        "定休日: 土日祝日（日本の祝日を含む）"
+                    ]
+                },
+                {
+                    "title": "販売価格",
+                    "content": [
+                        "各商品ページに表示",
+                        "表示価格には配送料が含まれています",
+                        "すべて税込価格です"
+                    ]
+                },
+                {
+                    "title": "支払方法",
+                    "content": [
+                        "クレジットカード（Visa、Mastercard、American Express等）",
+                        "PayPal",
+                        "Apple Pay",
+                        "Google Pay",
+                        "その他Shopifyが対応する決済方法"
+                    ]
+                },
+                {
+                    "title": "支払時期",
+                    "content": [
+                        "注文確定時に決済されます",
+                        "クレジットカードは各カード会社の規約に従います"
+                    ]
+                },
+                {
+                    "title": "商品引渡時期",
+                    "content": [
+                        "注文確定後、1-3営業日以内に発送します",
+                        "発送後、通常7-12日でお届けします",
+                        "配送先や商品により異なる場合があります"
+                    ]
+                },
+                {
+                    "title": "返品・交換について",
+                    "content": [
+                        "返品ポリシーをご確認ください",
+                        "商品到着後7日以内にご連絡ください",
+                        "未開封の商品のみ返品可能です"
+                    ]
+                },
+                {
+                    "title": "キャンセルについて",
+                    "content": [
+                        "発送前であればキャンセル可能です",
+                        "japan.anime.shoten@gmail.com までご連絡ください"
+                    ]
+                }
+            ]
+        }
+    },
     "footer_copyright": "© 2026 Japan Anime Shoten. All rights reserved."
 }
