--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -26,5 +26,355 @@
     "badge_support_desc": "배송 상황 상시 확인",
     "announcement_shipping": "일반 배송 무료!",
     "text_free_shipping": "일반 배송 무료",
-    "text_auth_guarantee": "100% 정품 보증"
+    "text_auth_guarantee": "100% 정품 보증",
+    "policies": {
+        "refund": {
+            "title": "반품 및 환불 정책",
+            "sections": [
+                {
+                    "title": "반품에 대하여",
+                    "content": [
+                        "상품 도착 후 7일 이내에 연락 주신 경우에만 반품을 접수합니다.",
+                        "반품 가능한 상품은 미개봉 상품에 한합니다.",
+                        "개봉된 상품은 반품이 불가합니다.",
+                        "반품 배송비는 고객 부담입니다."
+                    ]
+                },
+                {
+                    "title": "반품이 불가능한 경우",
+                    "content": [
+                        "상품 도착 후 8일 이상 경과한 경우",
+                        "상품을 개봉 또는 사용한 경우",
+                        "고객의 책임으로 상품이 파손 또는 오손된 경우",
+                        "세일 상품이나 특가 상품 (반품 불가가 명시된 상품)"
+                    ]
+                },
+                {
+                    "title": "환불에 대하여",
+                    "content": [
+                        "반품 상품 확인 후 7영업일 이내에 환불 처리를 진행합니다.",
+                        "환불 금액은 상품 상태에 따라 결정됩니다.",
+                        "미개봉으로 문제가 없는 경우 전액 환불합니다.",
+                        "상품에 문제가 있는 경우 상황에 따라 일부 환불될 수 있습니다.",
+                        "환불은 원래 결제 수단과 동일한 방법으로 진행됩니다."
+                    ]
+                },
+                {
+                    "title": "불량품 및 파손품",
+                    "content": [
+                        "상품 도착 시 파손이나 불량이 있는 경우 상품 도착 후 7일 이내에 연락 주십시오.",
+                        "불량품 및 파손품의 경우 반품 배송비를 당사가 부담합니다.",
+                        "교환 또는 전액 환불로 대응해 드립니다."
+                    ]
+                },
+                {
+                    "title": "반품 절차",
+                    "content": [
+                        "japan.anime.shoten@gmail.com 로 연락 주십시오.",
+                        "주문 번호, 상품명, 반품 사유를 기재해 주십시오.",
+                        "반품 주소를 안내해 드립니다.",
+                        "상품을 반송해 주십시오."
+                    ]
+                }
+            ]
+        },
+        "shipping": {
+            "title": "배송 정책",
+            "sections": [
+                {
+                    "title": "배송 방법",
+                    "content": [
+                        "주로 일본 우편의 국제 ePacket Light를 사용합니다.",
+                        "일부 상품은 EMS(국제 특급 우편)로 발송합니다.",
+                        "모든 상품에 추적 번호가 부여됩니다."
+                    ]
+                },
+                {
+                    "title": "배송 기간",
+                    "content": [
+                        "주문 확정 후 5-7영업일 이내에 발송합니다.",
+                        "발송 후, 도착까지 보통 7-16일이 소요됩니다.",
+                        "배송 국가나 지역에 따라 다를 수 있습니다.",
+                        "성수기나 세관 검사로 인해 지연될 수 있습니다."
+                    ]
+                },
+                {
+                    "title": "추적 번호",
+                    "content": [
+                        "발송 후 이메일로 추적 번호를 안내해 드립니다.",
+                        "일본 우편 추적 서비스에서 배송 상황을 확인할 수 있습니다.",
+                        "도착 국가의 우체국에서도 추적 가능합니다."
+                    ]
+                },
+                {
+                    "title": "배송비",
+                    "content": [
+                        "모든 상품 가격에 배송비가 포함되어 있습니다.",
+                        "결제 시 배송비는 0원으로 표시됩니다."
+                    ]
+                },
+                {
+                    "title": "배송지",
+                    "content": [
+                        "현재 다음 국가/지역으로 배송하고 있습니다:",
+                        "미국, 캐나다, 영국, 프랑스, 독일, 이탈리아, 스페인",
+                        "대만, 중국, 한국, 태국, 싱가포르",
+                        "기타 국가로의 배송은 문의해 주십시오."
+                    ]
+                },
+                {
+                    "title": "관세 및 수입세",
+                    "content": [
+                        "배송 국가에 따라 관세나 수입세가 발생할 수 있습니다.",
+                        "관세 및 수입세는 고객 부담입니다.",
+                        "각국의 세관 규정에 따라 금액이 다릅니다."
+                    ]
+                },
+                {
+                    "title": "배송 불가",
+                    "content": [
+                        "주소 불명이나 수취 거부의 경우 상품은 당사로 반송됩니다.",
+                        "반송 후 재발송에는 추가 배송비가 필요합니다.",
+                        "장기 부재로 인한 반송의 경우도 동일합니다."
+                    ]
+                },
+                {
+                    "title": "배송 문의",
+                    "content": [
+                        "japan.anime.shoten@gmail.com 로 연락 주십시오.",
+                        "추적 번호와 주문 번호를 기재해 주십시오."
+                    ]
+                }
+            ]
+        },
+        "privacy": {
+            "title": "개인정보 처리방침",
+            "sections": [
+                {
+                    "title": "개인정보 수집",
+                    "content": [
+                        "당사는 다음의 개인정보를 수집합니다:",
+                        "성명, 이메일 주소, 배송지 주소, 전화번호",
+                        "주문 내역, 결제 정보",
+                        "이들은 주문 처리 및 배송을 위해서만 사용됩니다."
+                    ]
+                },
+                {
+                    "title": "개인정보 이용 목적",
+                    "content": [
+                        "상품 발송 및 배송",
+                        "주문 내용 확인 및 통지",
+                        "문의 대응",
+                        "서비스 향상을 위한 분석 (통계 데이터로서)"
+                    ]
+                },
+                {
+                    "title": "개인정보의 제3자 제공",
+                    "content": [
+                        "배송 업체(일본 우편)에 배송에 필요한 정보를 제공합니다.",
+                        "결제 대행사(Shopify)에 결제 처리를 위한 정보를 제공합니다.",
+                        "법률에 의해 의무화된 경우를 제외하고 제3자에게 제공하지 않습니다."
+                    ]
+                },
+                {
+                    "title": "개인정보 보호",
+                    "content": [
+                        "적절한 보안 대책을 실시하고 있습니다.",
+                        "SSL 암호화 통신을 사용합니다.",
+                        "부정 접속, 분실, 파괴, 변조를 방지합니다."
+                    ]
+                },
+                {
+                    "title": "쿠키(Cookie) 사용",
+                    "content": [
+                        "사이트 기능 개선을 위해 쿠키를 사용합니다.",
+                        "브라우저 설정에서 쿠키를 비활성화할 수 있습니다.",
+                        "비활성화 시 일부 기능을 사용할 수 없는 경우가 있습니다."
+                    ]
+                },
+                {
+                    "title": "개인정보의 공개, 정정, 삭제",
+                    "content": [
+                        "자신의 개인정보 공개를 희망하시는 경우 연락 주십시오.",
+                        "정정이나 삭제를 희망하시는 경우도 대응합니다.",
+                        "문의: japan.anime.shoten@gmail.com"
+                    ]
+                },
+                {
+                    "title": "정책 변경",
+                    "content": [
+                        "본 정책은 예고 없이 변경될 수 있습니다.",
+                        "변경 후에는 웹사이트에 게시합니다."
+                    ]
+                }
+            ]
+        },
+        "terms": {
+            "title": "이용 약관",
+            "sections": [
+                {
+                    "title": "서비스 이용",
+                    "content": [
+                        "본 사이트를 이용함으로써 본 약관에 동의한 것으로 간주합니다.",
+                        "미성년자는 보호자의 동의가 필요합니다.",
+                        "허위 정보를 등록하는 것은 금지합니다."
+                    ]
+                },
+                {
+                    "title": "상품에 대하여",
+                    "content": [
+                        "모든 상품은 정품입니다.",
+                        "상품 이미지는 실물과 색상이 다를 수 있습니다.",
+                        "상품 사양은 예고 없이 변경될 수 있습니다.",
+                        "재고 상황에 따라 주문을 취소하는 경우가 있습니다."
+                    ]
+                },
+                {
+                    "title": "가격 및 결제",
+                    "content": [
+                        "표시 가격에는 모든 비용(상품 대금 + 배송비)이 포함되어 있습니다.",
+                        "가격은 예고 없이 변경될 수 있습니다.",
+                        "결제는 Shopify의 결제 시스템을 사용합니다.",
+                        "신용카드, PayPal 등을 이용할 수 있습니다."
+                    ]
+                },
+                {
+                    "title": "주문 취소",
+                    "content": [
+                        "발송 전이라면 주문 취소가 가능합니다.",
+                        "japan.anime.shoten@gmail.com 로 연락 주십시오.",
+                        "발송 후 취소는 불가능합니다.",
+                        "반품 정책에 따라 반품 절차를 진행해 주십시오."
+                    ]
+                },
+                {
+                    "title": "금지 사항",
+                    "content": [
+                        "허위 정보를 사용한 주문",
+                        "다른 고객이나 당사에 폐를 끼치는 행위",
+                        "법령을 위반하는 행위",
+                        "이러한 경우 주문을 취소할 수 있습니다."
+                    ]
+                },
+                {
+                    "title": "면책 조항",
+                    "content": [
+                        "배송 지연에 대한 책임은 지지 않습니다.",
+                        "세관에서의 압수나 파손에 대해서는 책임을 지지 않습니다.",
+                        "고객의 환경에 따라 상품이 정상적으로 작동하지 않을 수 있습니다.",
+                        "천재지변이나 불가항력에 의한 손해에 대해서는 책임을 지지 않습니다."
+                    ]
+                },
+                {
+                    "title": "지적 재산권",
+                    "content": [
+                        "본 사이트 콘텐츠의 저작권은 당사 또는 권리자에게 귀속됩니다.",
+                        "무단 전재, 복제, 개변은 금지합니다.",
+                        "상품 이미지의 무단 사용도 금지합니다."
+                    ]
+                },
+                {
+                    "title": "준거법 및 관할 법원",
+                    "content": [
+                        "본 약관은 일본법에 준거합니다.",
+                        "분쟁 발생 시 오사카 지방 법원을 전속적 합의 관할 법원으로 합니다."
+                    ]
+                },
+                {
+                    "title": "약관 변경",
+                    "content": [
+                        "본 약관은 예고 없이 변경될 수 있습니다.",
+                        "변경 후에는 웹사이트에 게시합니다.",
+                        "변경 후 이용은 신규 약관에 동의한 것으로 간주합니다."
+                    ]
+                },
+                {
+                    "title": "문의",
+                    "content": [
+                        "불명확한 점은 japan.anime.shoten@gmail.com 로 연락 주십시오."
+                    ]
+                }
+            ]
+        },
+        "legal": {
+            "title": "특정 상거래법에 근거한 표기",
+            "sections": [
+                {
+                    "title": "판매업자",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "운영 책임자",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "소재지",
+                    "content": [
+                        "일본 오사카부 오사카시",
+                        "상세 주소는 청구가 있는 경우 지체 없이 공개합니다."
+                    ]
+                },
+                {
+                    "title": "문의",
+                    "content": [
+                        "이메일: japan.anime.shoten@gmail.com",
+                        "영업 시간: 평일 10:00-18:00",
+                        "휴무일: 주말 및 일본 공휴일"
+                    ]
+                },
+                {
+                    "title": "판매 가격",
+                    "content": [
+                        "각 상품 페이지에 표시",
+                        "표시 가격에는 배송비가 포함되어 있습니다.",
+                        "모두 세금 포함 가격입니다."
+                    ]
+                },
+                {
+                    "title": "결제 방법",
+                    "content": [
+                        "신용카드(Visa, Mastercard, American Express 등)",
+                        "PayPal",
+                        "Apple Pay",
+                        "Google Pay",
+                        "기타 Shopify가 지원하는 결제 방법"
+                    ]
+                },
+                {
+                    "title": "결제 시기",
+                    "content": [
+                        "주문 확정 시 결제됩니다.",
+                        "신용카드는 각 카드사의 약관을 따릅니다."
+                    ]
+                },
+                {
+                    "title": "상품 인도 시기",
+                    "content": [
+                        "주문 확정 후 1-3영업일 이내에 발송합니다.",
+                        "발송 후 보통 7-12일 내에 도착합니다.",
+                        "배송지나 상품에 따라 다를 수 있습니다."
+                    ]
+                },
+                {
+                    "title": "반품 및 교환",
+                    "content": [
+                        "반품 정책을 확인해 주십시오.",
+                        "상품 도착 후 7일 이내에 연락 주십시오.",
+                        "미개봉 상품만 반품 가능합니다."
+                    ]
+                },
+                {
+                    "title": "취소에 대하여",
+                    "content": [
+                        "발송 전이라면 취소 가능합니다.",
+                        "japan.anime.shoten@gmail.com 로 연락 주십시오."
+                    ]
+                }
+            ]
+        }
+    }
 }
