--- a/public/locales/th/common.json
+++ b/public/locales/th/common.json
@@ -41,5 +41,355 @@
     "footer_subscribe_text": "สมัครเพื่อรับข้อเสนอพิเศษ ของแจกฟรี และดีลสุดพิเศษ",
     "footer_email_placeholder": "ป้อนอีเมลของคุณ",
     "footer_join": "เข้าร่วม",
+    "policies": {
+        "refund": {
+            "title": "นโยบายการคืนสินค้าและการคืนเงิน",
+            "sections": [
+                {
+                    "title": "เกี่ยวกับการคืนสินค้า",
+                    "content": [
+                        "รับคืนสินค้าเฉพาะกรณีที่ติดต่อภายใน 7 วันหลังจากได้รับสินค้า",
+                        "รับคืนเฉพาะสินค้าที่ยังไม่เปิดบรรจุภัณฑ์",
+                        "สินค้าที่เปิดแล้วไม่รับคืน",
+                        "ลูกค้าเป็นผู้รับผิดชอบค่าจัดส่งในการคืนสินค้า"
+                    ]
+                },
+                {
+                    "title": "กรณีที่ไม่รับคืน",
+                    "content": [
+                        "ผ่านไป 8 วันขึ้นไปนับจากวันที่ได้รับสินค้า",
+                        "สินค้าถูกเปิดหรือใช้งานแล้ว",
+                        "สินค้าเสียหายหรือเปื้อนจากความรับผิดชอบของลูกค้า",
+                        "สินค้าลดราคาหรือสินค้าราคาพิเศษ (ที่ระบุว่าไม่รับคืน)"
+                    ]
+                },
+                {
+                    "title": "เกี่ยวกับการคืนเงิน",
+                    "content": [
+                        "หลังจากตรวจสอบสินค้าที่คืนแล้ว จะดำเนินการคืนเงินภายใน 7 วันทำการ",
+                        "จำนวนเงินที่คืนขึ้นอยู่กับสภาพสินค้า",
+                        "คืนเงินเต็มจำนวนสำหรับสินค้าที่ยังไม่เปิดและไม่มีปัญหา",
+                        "อาจคืนเงินบางส่วนหากสินค้ามีปัญหา",
+                        "คืนเงินผ่านช่องทางเดียวกับที่ชำระเงิน"
+                    ]
+                },
+                {
+                    "title": "สินค้าชำรุดหรือเสียหาย",
+                    "content": [
+                        "หากสินค้าชำรุดหรือเสียหายเมื่อมาถึง โปรดติดต่อเราภายใน 7 วัน",
+                        "ร้านค้าจะรับผิดชอบค่าจัดส่งคืนสำหรับสินค้าชำรุดหรือเสียหาย",
+                        "เราจะเปลี่ยนสินค้าหรือคืนเงินเต็มจำนวน"
+                    ]
+                },
+                {
+                    "title": "ขั้นตอนการคืนสินค้า",
+                    "content": [
+                        "โปรดติดต่อ japan.anime.shoten@gmail.com",
+                        "ระบุหมายเลขคำสั่งซื้อ ชื่อสินค้า และเหตุผลในการคืน",
+                        "เราจะแจ้งที่อยู่สำหรับส่งคืน",
+                        "โปรดส่งสินค้ากลับมา"
+                    ]
+                }
+            ]
+        },
+        "shipping": {
+            "title": "นโยบายการจัดส่ง",
+            "sections": [
+                {
+                    "title": "วิธีการจัดส่ง",
+                    "content": [
+                        "ส่วนใหญ่ใช้ Japan Post International ePacket Light",
+                        "บางสินค้าส่งผ่าน EMS (ไปรษณีย์ด่วนพิเศษระหว่างประเทศ)",
+                        "สินค้าทุกชิ้นมีหมายเลขติดตาม"
+                    ]
+                },
+                {
+                    "title": "ระยะเวลาจัดส่ง",
+                    "content": [
+                        "จัดส่งภายใน 5-7 วันทำการหลังจากยืนยันคำสั่งซื้อ",
+                        "โดยปกติใช้เวลา 7-16 วันในการจัดส่งหลังจากส่งออก",
+                        "อาจแตกต่างกันไปตามประเทศหรือภูมิภาคปลายทาง",
+                        "อาจล่าช้าในช่วงเทศกาลหรือการตรวจสอบทางศุลกากร"
+                    ]
+                },
+                {
+                    "title": "หมายเลขติดตาม",
+                    "content": [
+                        "จะแจ้งหมายเลขติดตามทางอีเมลหลังจากจัดส่ง",
+                        "ตรวจสอบสถานะได้ทางบริการติดตามของ Japan Post",
+                        "ตรวจสอบได้ที่ไปรษณีย์ในประเทศปลายทาง"
+                    ]
+                },
+                {
+                    "title": "ค่าจัดส่ง",
+                    "content": [
+                        "ราคาค้ารวมค่าจัดส่งแล้ว",
+                        "ค่าจัดส่งจะแสดงเป็น 0 เยนเมื่อชำระเงิน"
+                    ]
+                },
+                {
+                    "title": "ปลายทางการจัดส่ง",
+                    "content": [
+                        "ปัจจุบันจัดส่งไปยังประเทศ/ภูมิภาคต่อไปนี้:",
+                        "สหรัฐอเมริกา แคนาดา สหราชอาณาจักร ฝรั่งเศส เยอรมนี อิตาลี สเปน",
+                        "ไต้หวัน จีน เกาหลีใต้ ไทย สิงคโปร์",
+                        "โปรดสอบถามสำหรับการจัดส่งไปยังประเทศอื่น"
+                    ]
+                },
+                {
+                    "title": "ภาษีศุลกากรและภาษีนำเข้า",
+                    "content": [
+                        "อาจมีภาษีศุลกากรหรือภาษีนำเข้าขึ้นอยู่กับประเทศปลายทาง",
+                        "ลูกค้าเป็นผู้รับผิดชอบภาษีศุลกากรและภาษีนำเข้า",
+                        "จำนวนเงินแตกต่างกันไปตามระเบียบศุลกากรของแต่ละประเทศ"
+                    ]
+                },
+                {
+                    "title": "กรณีที่จัดส่งไม่ได้",
+                    "content": [
+                        "หากที่อยู่ไม่ชัดเจนหรือปฏิเสธการรับ สินค้าจะถูกส่งกลับมาที่ร้าน",
+                        "ต้องชำระค่าจัดส่งเพิ่มสำหรับการจัดส่งใหม่",
+                        "รวมถึงกรณีส่งคืนเนื่องจากไม่อยู่บ้านเป็นเวลานาน"
+                    ]
+                },
+                {
+                    "title": "สอบถามเกี่ยวกับการจัดส่ง",
+                    "content": [
+                        "โปรดติดต่อ japan.anime.shoten@gmail.com",
+                        "ระบุหมายเลขติดตามและหมายเลขคำสั่งซื้อ"
+                    ]
+                }
+            ]
+        },
+        "privacy": {
+            "title": "นโยบายความเป็นส่วนตัว",
+            "sections": [
+                {
+                    "title": "การเก็บรวบรวมข้อมูลส่วนบุคคล",
+                    "content": [
+                        "ร้านค้าเก็บรวบรวมข้อมูลส่วนบุคคลดังนี้:",
+                        "ชื่อ อีเมล ที่อยู่จัดส่ง หมายเลขโทรศัพท์",
+                        "ประวัติการสั่งซื้อ ข้อมูลการชำระเงิน",
+                        "ใช้เพื่อการประมวลผลคำสั่งซื้อและการจัดส่งเท่านั้น"
+                    ]
+                },
+                {
+                    "title": "วัตถุประสงค์การใช้ข้อมูล",
+                    "content": [
+                        "การจัดส่งสินค้า",
+                        "การยืนยันและแจ้งเตือนคำสั่งซื้อ",
+                        "การตอบกลับข้อซักถาม",
+                        "การวิเคราะห์เพื่อปรับปรุงบริการ (เป็นข้อมูลสถิติ)"
+                    ]
+                },
+                {
+                    "title": "การให้ข้อมูลแก่บุคคลที่สาม",
+                    "content": [
+                        "ให้ข้อมูลที่จำเป็นแก่บริษัทขนส่ง (Japan Post)",
+                        "ให้ข้อมูลที่จำเป็นแก่บริษัทประมวลผลการชำระเงิน (Shopify)",
+                        "ไม่ให้ข้อมูลแก่บุคคลที่สามเว้นแต่กฎหมายกำหนด"
+                    ]
+                },
+                {
+                    "title": "การปกป้องข้อมูล",
+                    "content": [
+                        "ใช้มาตรการความปลอดภัยที่เหมาะสม",
+                        "ใช้การเข้ารหัส SSL",
+                        "ป้องกันการเข้าถึงโดยไม่ได้รับอนุญาต การสูญหาย การทำลาย และการปลอมแปลง"
+                    ]
+                },
+                {
+                    "title": "การใช้คุกกี้ (Cookie)",
+                    "content": [
+                        "ใช้คุกกี้เพื่อปรับปรุงการทำงานของเว็บไซต์",
+                        "ปิดการใช้งานคุกกี้ได้ในการตั้งค่าเบราว์เซอร์",
+                        "ฟังก์ชันบางอย่างอาจใช้งานไม่ได้หากปิดคุกกี้"
+                    ]
+                },
+                {
+                    "title": "การเปิดเผย แก้ไข ลบข้อมูล",
+                    "content": [
+                        "โปรดติดต่อเราหากต้องการเปิดเผยข้อมูลส่วนบุคคล",
+                        "รับคำร้องขอแก้ไขหรือลบข้อมูล",
+                        "ติดต่อ: japan.anime.shoten@gmail.com"
+                    ]
+                },
+                {
+                    "title": "การเปลี่ยนแปลงนโยบาย",
+                    "content": [
+                        "นโยบายนี้อาจเปลี่ยนแปลงได้โดยไม่ต้องแจ้งให้ทราบล่วงหน้า",
+                        "จะประกาศการเปลี่ยนแปลงบนเว็บไซต์"
+                    ]
+                }
+            ]
+        },
+        "terms": {
+            "title": "ข้อกำหนดการใช้งาน",
+            "sections": [
+                {
+                    "title": "การใช้บริการ",
+                    "content": [
+                        "การใช้เว็บไซต์นี้ถือว่ายอมรับข้อกำหนดนี้",
+                        "ผู้เยาว์ต้องได้รับความยินยอมจากผู้ปกครอง",
+                        "ห้ามลงทะเบียนข้อมูลเท็จ"
+                    ]
+                },
+                {
+                    "title": "เกี่ยวกับสินค้า",
+                    "content": [
+                        "สินค้าทุกชิ้นเป็นของแท้",
+                        "สีของภาพสินค้าอาจแตกต่างจากของจริงเล็กน้อย",
+                        "ข้อมูลจำเพาะของสินค้าอาจเปลี่ยนแปลงได้โดยไม่ต้องแจ้งให้ทราบ",
+                        "อาจยกเลิกคำสั่งซื้อขึ้นอยู่กับสถานะสินค้าคงคลัง"
+                    ]
+                },
+                {
+                    "title": "ราคาและการชำระเงิน",
+                    "content": [
+                        "ราคาที่แสดงรวมค่าใช้จ่ายทั้งหมดแล้ว (ราคาสินค้า + ค่าจัดส่ง)",
+                        "ราคาอาจเปลี่ยนแปลงได้โดยไม่ต้องแจ้งให้ทราบ",
+                        "ชำระเงินผ่านระบบ Shopify",
+                        "รับบัตรเครดิต PayPal ฯลฯ"
+                    ]
+                },
+                {
+                    "title": "การยกเลิกคำสั่งซื้อ",
+                    "content": [
+                        "สามารถยกเลิกได้ก่อนจัดส่ง",
+                        "โปรดติดต่อ japan.anime.shoten@gmail.com",
+                        "ไม่สามารถยกเลิกได้หลังจัดส่ง",
+                        "โปรดดำเนินการคืนสินค้าตามนโยบายการคืนสินค้า"
+                    ]
+                },
+                {
+                    "title": "ข้อห้าม",
+                    "content": [
+                        "การสั่งซื้อโดยใช้ข้อมูลเท็จ",
+                        "การกระทำที่สร้างความเดือดร้อนให้ลูกค้าอื่นหรือร้านค้า",
+                        "การกระทำที่ผิดกฎหมาย",
+                        "อาจยกเลิกคำสั่งซื้อหากเข้าข่ายกรณีเหล่านี้"
+                    ]
+                },
+                {
+                    "title": "ข้อจำกัดความรับผิด",
+                    "content": [
+                        "ไม่รับผิดชอบต่อความล่าช้าในการจัดส่ง",
+                        "ไม่รับผิดชอบต่อการยึดหรือความเสียหายที่ศุลกากร",
+                        "สินค้าอาจทำงานไม่ปกติขึ้นอยู่กับสภาพแวดล้อมของลูกค้า",
+                        "ไม่รับผิดชอบต่อความเสียหายจากภัยธรรมชาติหรือเหตุสุดวิสัย"
+                    ]
+                },
+                {
+                    "title": "ทรัพย์สินทางปัญญา",
+                    "content": [
+                        "ลิขสิทธิ์เนื้อหาบนเว็บไซต์เป็นของร้านค้าหรือเจ้าของสิทธิ์",
+                        "ห้ามทำซ้ำ คัดลอก หรือแก้ไขโดยไม่ได้รับอนุญาต",
+                        "ห้ามใช้ภาพสินค้าโดยไม่ได้รับอนุญาต"
+                    ]
+                },
+                {
+                    "title": "กฎหมายที่ใช้บังคับและศาลที่มีอำนาจ",
+                    "content": [
+                        "ข้อกำหนดนี้อยู่ภายใต้กฎหมายญี่ปุ่น",
+                        "ศาลแขวงโอซาก้าเป็นศาลที่มีอำนาจพิจารณาคดีเฉพาะ"
+                    ]
+                },
+                {
+                    "title": "การเปลี่ยนแปลงข้อกำหนด",
+                    "content": [
+                        "ข้อกำหนดนี้อาจเปลี่ยนแปลงได้โดยไม่ต้องแจ้งให้ทราบ",
+                        "จะประกาศบนเว็บไซต์หลังเปลี่ยนแปลง",
+                        "การใช้งานต่อถือว่ายอมรับข้อกำหนดใหม่"
+                    ]
+                },
+                {
+                    "title": "ติดต่อสอบถาม",
+                    "content": [
+                        "หากมีข้อสงสัยโปรดติดต่อ japan.anime.shoten@gmail.com"
+                    ]
+                }
+            ]
+        },
+        "legal": {
+            "title": "การแสดงข้อมูลตามกฎหมายธุรกรรมเชิงพาณิชย์",
+            "sections": [
+                {
+                    "title": "ผู้ขาย",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "ผู้รับผิดชอบการดำเนินงาน",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "ที่ตั้ง",
+                    "content": [
+                        "เมืองโอซาก้า จังหวัดโอซาก้า ญี่ปุ่น",
+                        "จะเปิดเผยที่อยู่โดยละเอียดทันทีเมื่อมีการร้องขอ"
+                    ]
+                },
+                {
+                    "title": "ติดต่อ",
+                    "content": [
+                        "อีเมล: japan.anime.shoten@gmail.com",
+                        "เวลาทำการ: วันธรรมดา 10:00-18:00",
+                        "วันหยุด: เสาร์อาทิตย์และวันหยุดนักขัตฤกษ์ของญี่ปุ่น"
+                    ]
+                },
+                {
+                    "title": "ราคาขาย",
+                    "content": [
+                        "แสดงในหน้าสินค้าแต่ละรายการ",
+                        "ราคารวมค่าจัดส่งแล้ว",
+                        "ราคารวมภาษีแล้ว"
+                    ]
+                },
+                {
+                    "title": "วิธีการชำระเงิน",
+                    "content": [
+                        "บัตรเครดิต (Visa, Mastercard, American Express ฯลฯ)",
+                        "PayPal",
+                        "Apple Pay",
+                        "Google Pay",
+                        "วิธีการชำระเงินอื่นๆ ที่ Shopify รองรับ"
+                    ]
+                },
+                {
+                    "title": "ระยะเวลาชำระเงิน",
+                    "content": [
+                        "ชำระเงินเมื่อยืนยันคำสั่งซื้อ",
+                        "บัตรเครดิตเป็นไปตามเงื่อนไขของบริษัทบัตร"
+                    ]
+                },
+                {
+                    "title": "ระยะเวลาส่งมอบสินค้า",
+                    "content": [
+                        "จัดส่งภายใน 1-3 วันทำการหลังยืนยันคำสั่งซื้อ",
+                        "ปกติถึงภายใน 7-12 วันหลังส่ง",
+                        "อาจแตกต่างกันตามปลายทางและสินค้า"
+                    ]
+                },
+                {
+                    "title": "การคืนและเปลี่ยนสินค้า",
+                    "content": [
+                        "โปรดตรวจสอบนโยบายการคืนสินค้า",
+                        "ติดต่อภายใน 7 วันหลังได้รับสินค้า",
+                        "เฉพาะสินค้าที่ยังไม่เปิดเท่านั้น"
+                    ]
+                },
+                {
+                    "title": "เกี่ยวกับการยกเลิก",
+                    "content": [
+                        "ยกเลิกได้ก่อนจัดส่ง",
+                        "โปรดติดต่อ japan.anime.shoten@gmail.com"
+                    ]
+                }
+            ]
+        }
+    },
     "footer_copyright": "© 2026 Japan Anime Shoten. สงวนลิขสิทธิ์"
 }
