--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -41,5 +41,355 @@
     "footer_subscribe_text": "订阅以获取特别优惠、免费赠品和千载难逢的交易。",
     "footer_email_placeholder": "输入您的电子邮件",
     "footer_join": "加入",
+    "policies": {
+        "refund": {
+            "title": "退货和退款政策",
+            "sections": [
+                {
+                    "title": "关于退货",
+                    "content": [
+                        "仅在收到商品后7天内联系我们才接受退货。",
+                        "仅限未开封商品可退货。",
+                        "已开封商品概不接受退货。",
+                        "退货运费由客户承担。"
+                    ]
+                },
+                {
+                    "title": "不可退货的情况",
+                    "content": [
+                        "收到商品超过8天的情况。",
+                        "商品已开封或使用的情况。",
+                        "因客户原因导致商品损坏或污损的情况。",
+                        "特价商品或促销商品（注明不可退货的商品）。"
+                    ]
+                },
+                {
+                    "title": "关于退款",
+                    "content": [
+                        "收到退货确认后，将在7个工作日内办理退款。",
+                        "退款金额将根据商品状态决定。",
+                        "未开封且无问题的商品全额退款。",
+                        "如果商品有问题，可能会根据情况部分退款。",
+                        "退款将通过原支付方式进行。"
+                    ]
+                },
+                {
+                    "title": "次品或损坏品",
+                    "content": [
+                        "如果收到商品时有损坏或次品，请在收到商品后7天内联系我们。",
+                        "次品或损坏品的退货运费由本店承担。",
+                        "我们将提供换货或全额退款。"
+                    ]
+                },
+                {
+                    "title": "退货流程",
+                    "content": [
+                        "请联系 japan.anime.shoten@gmail.com。",
+                        "请注明订单号、商品名称和退货理由。",
+                        "我们将告知退货地址。",
+                        "请寄回商品。"
+                    ]
+                }
+            ]
+        },
+        "shipping": {
+            "title": "配送政策",
+            "sections": [
+                {
+                    "title": "配送方式",
+                    "content": [
+                        "主要使用日本邮政的国际ePacket Light。",
+                        "部分商品通过EMS（国际特快专递）发送。",
+                        "所有商品均附带追踪号码。"
+                    ]
+                },
+                {
+                    "title": "配送时间",
+                    "content": [
+                        "订单确认后5-7个工作日内发货。",
+                        "发货后通常需7-16天送达。",
+                        "根据目的地国家或地区可能会有所不同。",
+                        "繁忙期或海关检查可能会导致延误。"
+                    ]
+                },
+                {
+                    "title": "追踪号码",
+                    "content": [
+                        "发货后将通过邮件通知追踪号码。",
+                        "可通过日本邮政的追踪服务确认配送状况。",
+                        "也可在目的地国家的邮局进行追踪。"
+                    ]
+                },
+                {
+                    "title": "运费",
+                    "content": [
+                        "所有商品价格均包含运费。",
+                        "结账时的运费将显示为0日元。"
+                    ]
+                },
+                {
+                    "title": "配送目的地",
+                    "content": [
+                        "目前配送至以下国家/地区：",
+                        "美国、加拿大、英国、法国、德国、意大利、西班牙",
+                        "台湾、中国、韩国、泰国、新加坡",
+                        "其他国家请咨询。"
+                    ]
+                },
+                {
+                    "title": "关税和进口税",
+                    "content": [
+                        "根据配送目的国可能会产生关税或进口税。",
+                        "关税和进口税由客户承担。",
+                        "金额因各囯海关规定而异。"
+                    ]
+                },
+                {
+                    "title": "无法配送的情况",
+                    "content": [
+                        "因地址不明或拒收导致的退货，商品将退回本店。",
+                        "退回后的重新发货需要支付额外运费。",
+                        "因长期不在导致的退货也同样处理。"
+                    ]
+                },
+                {
+                    "title": "配送咨询",
+                    "content": [
+                        "请联系 japan.anime.shoten@gmail.com。",
+                        "请注明追踪号码和订单号。"
+                    ]
+                }
+            ]
+        },
+        "privacy": {
+            "title": "隐私政策",
+            "sections": [
+                {
+                    "title": "个人信息收集",
+                    "content": [
+                        "本店收集以下个人信息：",
+                        "姓名、电子邮件地址、配送地址、电话号码",
+                        "订单历史、支付信息",
+                        "这些信息仅用于订单处理和配送。"
+                    ]
+                },
+                {
+                    "title": "个人信息使用目的",
+                    "content": [
+                        "商品的发货和配送",
+                        "订单内容的确认和通知",
+                        "回复咨询",
+                        "服务改进分析（作为统计数据）"
+                    ]
+                },
+                {
+                    "title": "第三方提供",
+                    "content": [
+                        "向配送公司（日本邮政）提供配送所需信息。",
+                        "向支付处理公司（Shopify）提供支付处理所需信息。",
+                        "除法律规定外，不向第三方提供信息。"
+                    ]
+                },
+                {
+                    "title": "个人信息保护",
+                    "content": [
+                        "实施适当的安全措施。",
+                        "使用SSL加密通信。",
+                        "防止未经授权的访问、丢失、破坏和篡改。"
+                    ]
+                },
+                {
+                    "title": "Cookie的使用",
+                    "content": [
+                        "使用Cookie改善网站功能。",
+                        "可在浏览器设置中禁用Cookie。",
+                        "禁用后部分功能可能无法使用。"
+                    ]
+                },
+                {
+                    "title": "个人信息的披露、更正、删除",
+                    "content": [
+                        "如希披露个人信息请联系我们。",
+                        "也接受更正或删除的请求。",
+                        "联系方式：japan.anime.shoten@gmail.com"
+                    ]
+                },
+                {
+                    "title": "政策变更",
+                    "content": [
+                        "本政策可能会在不通知的情况下变更。",
+                        "变更后将在网站上公布。"
+                    ]
+                }
+            ]
+        },
+        "terms": {
+            "title": "使用条款",
+            "sections": [
+                {
+                    "title": "服务使用",
+                    "content": [
+                        "使用本网站即视为同意本条款。",
+                        "未成年人需要监护人同意。",
+                        "禁止注册虚假信息。"
+                    ]
+                },
+                {
+                    "title": "关于商品",
+                    "content": [
+                        "所有商品均为正品。",
+                        "商品图片颜色可能与实物略有不同。",
+                        "商品规格如有变更恕不另行通知。",
+                        "根据库存状况可能会取消订单。"
+                    ]
+                },
+                {
+                    "title": "价格与支付",
+                    "content": [
+                        "显示价格包含所有费用（商品价格+运费）。",
+                        "价格如有变更恕不另行通知。",
+                        "通过Shopify支付系统进行结算。",
+                        "可使用信用卡、PayPal等。"
+                    ]
+                },
+                {
+                    "title": "订单取消",
+                    "content": [
+                        "发货前可取消订单。",
+                        "请联系 japan.anime.shoten@gmail.com。",
+                        "发货后无法取消。",
+                        "请按照退货政策办理退货。"
+                    ]
+                },
+                {
+                    "title": "禁止事项",
+                    "content": [
+                        "使用虚假信息下单。",
+                        "给其他客户或本店造成麻烦的行为。",
+                        "违反法律法规的行为。",
+                        "如有此类行为，可能会取消订单。"
+                    ]
+                },
+                {
+                    "title": "免责声明",
+                    "content": [
+                        "不对配送延误负责。",
+                        "不对海关没收或损坏负责。",
+                        "因客户环境导致商品无法正常工作的情况不予负责。",
+                        "不对天灾或不可抗力造成的损害负责。"
+                    ]
+                },
+                {
+                    "title": "知识产权",
+                    "content": [
+                        "本网站内容的版权归本店或权利人所有。",
+                        "禁止未经授权的转载、复制、修改。",
+                        "禁止擅自使用商品图片。"
+                    ]
+                },
+                {
+                    "title": "适用法律与管辖法院",
+                    "content": [
+                        "本条款受日本法律管辖。",
+                        "发生纠纷时以大阪地方法院为专属协议管辖法院。"
+                    ]
+                },
+                {
+                    "title": "条款变更",
+                    "content": [
+                        "本条款可能会在不通知的情况下变更。",
+                        "变更后将在网站上公布。",
+                        "变更后继续使用即视为同意新条款。"
+                    ]
+                },
+                {
+                    "title": "咨询",
+                    "content": [
+                        "如有疑问请联系 japan.anime.shoten@gmail.com。"
+                    ]
+                }
+            ]
+        },
+        "legal": {
+            "title": "特定商交易法表述",
+            "sections": [
+                {
+                    "title": "销售商",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "运营负责人",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "所在地",
+                    "content": [
+                        "日本大阪府大阪市",
+                        "如有请求将及时披露详细地址。"
+                    ]
+                },
+                {
+                    "title": "联系方式",
+                    "content": [
+                        "邮箱: japan.anime.shoten@gmail.com",
+                        "营业时间: 工作日 10:00-18:00",
+                        "休息日: 周末及日本节假日"
+                    ]
+                },
+                {
+                    "title": "销售价格",
+                    "content": [
+                        "显示在各商品页面。",
+                        "显示价格包含运费。",
+                        "均为含税价格。"
+                    ]
+                },
+                {
+                    "title": "支付方式",
+                    "content": [
+                        "信用卡（Visa, Mastercard, American Express等）",
+                        "PayPal",
+                        "Apple Pay",
+                        "Google Pay",
+                        "其他Shopify支持的支付方式"
+                    ]
+                },
+                {
+                    "title": "支付时期",
+                    "content": [
+                        "订单确认时结算。",
+                        "信用卡遵循各发卡公司条款。"
+                    ]
+                },
+                {
+                    "title": "发货时期",
+                    "content": [
+                        "订单确认后1-3个工作日内发货。",
+                        "发货后通常7-12天送达。",
+                        "因配送地和商品而异。"
+                    ]
+                },
+                {
+                    "title": "退货和换货",
+                    "content": [
+                        "请确认退货政策。",
+                        "收到商品后7天内联系。",
+                        "仅限未开封商品。"
+                    ]
+                },
+                {
+                    "title": "关于取消",
+                    "content": [
+                        "发货前可取消。",
+                        "请联系 japan.anime.shoten@gmail.com。"
+                    ]
+                }
+            ]
+        }
+    },
     "footer_copyright": "© 2026 Japan Anime Shoten. 保留所有权利。"
 }
