--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -26,5 +26,355 @@
     "badge_support_desc": "隨時掌握物流動態",
     "announcement_shipping": "標準配送免費！",
     "text_free_shipping": "標準配送免費",
-    "text_auth_guarantee": "100% 正品保證"
+    "text_auth_guarantee": "100% 正品保證",
+    "policies": {
+        "refund": {
+            "title": "退貨和退款政策",
+            "sections": [
+                {
+                    "title": "關於退貨",
+                    "content": [
+                        "僅在收到商品後7天內聯繫我們才接受退貨。",
+                        "僅限未開封商品可退貨。",
+                        "已開封商品概不接受退貨。",
+                        "退貨運費由客戶承擔。"
+                    ]
+                },
+                {
+                    "title": "不可退貨的情況",
+                    "content": [
+                        "收到商品超過8天的情況。",
+                        "商品已開封或使用的情況。",
+                        "因客戶原因導致商品損壞或污損的情況。",
+                        "特價商品或促銷商品（註明不可退貨的商品）。"
+                    ]
+                },
+                {
+                    "title": "關於退款",
+                    "content": [
+                        "收到退貨確認後，將在7個工作日內辦理退款。",
+                        "退款金額將根據商品狀態決定。",
+                        "未開封且無問題的商品全額退款。",
+                        "如果商品有問題，可能會根據情況部分退款。",
+                        "退款將通過原支付方式進行。"
+                    ]
+                },
+                {
+                    "title": "瑕疵品或損壞品",
+                    "content": [
+                        "如果收到商品時有損壞或瑕疵，請在收到商品後7天內聯繫我們。",
+                        "瑕疵品或損壞品的退貨運費由本店承擔。",
+                        "我們將提供換貨或全額退款。"
+                    ]
+                },
+                {
+                    "title": "退貨流程",
+                    "content": [
+                        "請聯繫 japan.anime.shoten@gmail.com。",
+                        "請註明訂單號、商品名稱和退貨理由。",
+                        "我們將告知退貨地址。",
+                        "請寄回商品。"
+                    ]
+                }
+            ]
+        },
+        "shipping": {
+            "title": "配送政策",
+            "sections": [
+                {
+                    "title": "配送方式",
+                    "content": [
+                        "主要使用日本郵政的國際ePacket Light。",
+                        "部分商品通過EMS（國際特快專遞）發送。",
+                        "所有商品均附帶追蹤號碼。"
+                    ]
+                },
+                {
+                    "title": "配送時間",
+                    "content": [
+                        "訂單確認後5-7個工作日內發貨。",
+                        "發貨後通常需7-16天送達。",
+                        "根據目的地國家或地區可能會有所不同。",
+                        "繁忙期或海關檢查可能會導致延誤。"
+                    ]
+                },
+                {
+                    "title": "追蹤號碼",
+                    "content": [
+                        "發貨後將通過郵件通知追蹤號碼。",
+                        "可通過日本郵政的追蹤服務確認配送狀況。",
+                        "也可在目的地國家的郵局進行追蹤。"
+                    ]
+                },
+                {
+                    "title": "運費",
+                    "content": [
+                        "所有商品價格均包含運費。",
+                        "結帳時的運費將顯示為0日元。"
+                    ]
+                },
+                {
+                    "title": "配送目的地",
+                    "content": [
+                        "目前配送至以下國家/地區：",
+                        "美國、加拿大、英國、法國、德國、義大利、西班牙",
+                        "台灣、中國、韓國、泰國、新加坡",
+                        "其他國家請諮詢。"
+                    ]
+                },
+                {
+                    "title": "關稅和進口稅",
+                    "content": [
+                        "根據配送目的國可能會產生關稅或進口稅。",
+                        "關稅和進口稅由客戶承擔。",
+                        "金額因各國海關規定而異。"
+                    ]
+                },
+                {
+                    "title": "無法配送的情況",
+                    "content": [
+                        "因地址不明或拒收導致的退貨，商品將退回本店。",
+                        "退回後的重新發貨需要支付額外運費。",
+                        "因長期不在導致的退貨也同樣處理。"
+                    ]
+                },
+                {
+                    "title": "配送諮詢",
+                    "content": [
+                        "請聯繫 japan.anime.shoten@gmail.com。",
+                        "請註明追蹤號碼和訂單號。"
+                    ]
+                }
+            ]
+        },
+        "privacy": {
+            "title": "隱私政策",
+            "sections": [
+                {
+                    "title": "個人資訊收集",
+                    "content": [
+                        "本店收集以下個人資訊：",
+                        "姓名、電子郵件地址、配送地址、電話號碼",
+                        "訂單歷史、支付資訊",
+                        "這些資訊僅用於訂單處理和配送。"
+                    ]
+                },
+                {
+                    "title": "個人資訊使用目的",
+                    "content": [
+                        "商品的發貨和配送",
+                        "訂單內容的確認和通知",
+                        "回覆諮詢",
+                        "服務改進分析（作為統計數據）"
+                    ]
+                },
+                {
+                    "title": "第三方提供",
+                    "content": [
+                        "向配送公司（日本郵政）提供配送所需資訊。",
+                        "向支付處理公司（Shopify）提供支付處理所需資訊。",
+                        "除法律規定外，不向第三方提供資訊。"
+                    ]
+                },
+                {
+                    "title": "個人資訊保護",
+                    "content": [
+                        "實施適當的安全措施。",
+                        "使用SSL加密通信。",
+                        "防止未經授權的訪問、丟失、破壞和篡改。"
+                    ]
+                },
+                {
+                    "title": "Cookie的使用",
+                    "content": [
+                        "使用Cookie改善網站功能。",
+                        "可在瀏覽器設置中禁用Cookie。",
+                        "禁用後部分功能可能無法使用。"
+                    ]
+                },
+                {
+                    "title": "個人資訊的披露、更正、刪除",
+                    "content": [
+                        "如希披露個人資訊請聯繫我們。",
+                        "也接受更正或刪除的請求。",
+                        "聯繫方式：japan.anime.shoten@gmail.com"
+                    ]
+                },
+                {
+                    "title": "政策變更",
+                    "content": [
+                        "本政策可能會在不通知的情況下變更。",
+                        "變更後將在網站上公佈。"
+                    ]
+                }
+            ]
+        },
+        "terms": {
+            "title": "使用條款",
+            "sections": [
+                {
+                    "title": "服務使用",
+                    "content": [
+                        "使用本網站即視為同意本條款。",
+                        "未成年人需要監護人同意。",
+                        "禁止註冊虛假資訊。"
+                    ]
+                },
+                {
+                    "title": "關於商品",
+                    "content": [
+                        "所有商品均為正品。",
+                        "商品圖片顏色可能與實物略有不同。",
+                        "商品規格如有變更恕不另行通知。",
+                        "根據庫存狀況可能會取消訂單。"
+                    ]
+                },
+                {
+                    "title": "價格與支付",
+                    "content": [
+                        "顯示價格包含所有費用（商品價格+運費）。",
+                        "價格如有變更恕不另行通知。",
+                        "通過Shopify支付系統進行結算。",
+                        "可使用信用卡、PayPal等。"
+                    ]
+                },
+                {
+                    "title": "訂單取消",
+                    "content": [
+                        "發貨前可取消訂單。",
+                        "請聯繫 japan.anime.shoten@gmail.com。",
+                        "發貨後無法取消。",
+                        "請按照退貨政策辦理退貨。"
+                    ]
+                },
+                {
+                    "title": "禁止事項",
+                    "content": [
+                        "使用虛假資訊下單。",
+                        "給其他客戶或本店造成麻煩的行為。",
+                        "違反法律法規的行為。",
+                        "如有此類行為，可能會取消訂單。"
+                    ]
+                },
+                {
+                    "title": "免責聲明",
+                    "content": [
+                        "不對配送延誤負責。",
+                        "不對海關沒收或損壞負責。",
+                        "因客戶環境導致商品無法正常工作的情況不予負責。",
+                        "不對天災或不可抗力造成的損害負責。"
+                    ]
+                },
+                {
+                    "title": "知識產權",
+                    "content": [
+                        "本網站內容的版權歸本店或權利人所有。",
+                        "禁止未經授權的轉載、複製、修改。",
+                        "禁止擅自使用商品圖片。"
+                    ]
+                },
+                {
+                    "title": "適用法律與管轄法院",
+                    "content": [
+                        "本條款受日本法律管轄。",
+                        "發生糾紛時以大阪地方法院為專屬協議管轄法院。"
+                    ]
+                },
+                {
+                    "title": "條款變更",
+                    "content": [
+                        "本條款可能會在不通知的情況下變更。",
+                        "變更後將在網站上公佈。",
+                        "變更後繼續使用即視為同意新條款。"
+                    ]
+                },
+                {
+                    "title": "諮詢",
+                    "content": [
+                        "如有疑問請聯繫 japan.anime.shoten@gmail.com。"
+                    ]
+                }
+            ]
+        },
+        "legal": {
+            "title": "特定商交易法表述",
+            "sections": [
+                {
+                    "title": "銷售商",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "運營負責人",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "所在地",
+                    "content": [
+                        "日本大阪府大阪市",
+                        "如有請求將及時披露詳細地址。"
+                    ]
+                },
+                {
+                    "title": "聯繫方式",
+                    "content": [
+                        "郵箱: japan.anime.shoten@gmail.com",
+                        "營業時間: 工作日 10:00-18:00",
+                        "休息日: 週末及日本節假日"
+                    ]
+                },
+                {
+                    "title": "銷售價格",
+                    "content": [
+                        "顯示在各商品頁面。",
+                        "顯示價格包含運費。",
+                        "均為含稅價格。"
+                    ]
+                },
+                {
+                    "title": "支付方式",
+                    "content": [
+                        "信用卡（Visa, Mastercard, American Express等）",
+                        "PayPal",
+                        "Apple Pay",
+                        "Google Pay",
+                        "其他Shopify支持的支付方式"
+                    ]
+                },
+                {
+                    "title": "支付時期",
+                    "content": [
+                        "訂單確認時結算。",
+                        "信用卡遵循各發卡公司條款。"
+                    ]
+                },
+                {
+                    "title": "發貨時期",
+                    "content": [
+                        "訂單確認後1-3個工作日內發貨。",
+                        "發貨後通常7-12天送達。",
+                        "因配送地和商品而異。"
+                    ]
+                },
+                {
+                    "title": "退貨和換貨",
+                    "content": [
+                        "請確認退貨政策。",
+                        "收到商品後7天內聯繫。",
+                        "僅限未開封商品。"
+                    ]
+                },
+                {
+                    "title": "關於取消",
+                    "content": [
+                        "發貨前可取消。",
+                        "請聯繫 japan.anime.shoten@gmail.com。"
+                    ]
+                }
+            ]
+        }
+    }
 }
