--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -43,5 +43,355 @@
     "footer_subscribe_text": "Subscribe to get special offers, free giveaways, and once-in-a-lifetime deals.",
     "footer_email_placeholder": "Enter your email",
     "footer_join": "Join",
+    "policies": {
+        "refund": {
+            "title": "Refund Policy",
+            "sections": [
+                {
+                    "title": "Returns",
+                    "content": [
+                        "Returns are accepted only if contacted within 7 days of arrival.",
+                        "Items must be unopened to be eligible for return.",
+                        "Opened items cannot be returned.",
+                        "Return shipping costs are the responsibility of the customer."
+                    ]
+                },
+                {
+                    "title": "Non-returnable Items",
+                    "content": [
+                        "Items where 8 or more days have passed since arrival.",
+                        "Items that have been opened or used.",
+                        "Items damaged or soiled by the customer.",
+                        "Sale items or special price items (marked as non-returnable)."
+                    ]
+                },
+                {
+                    "title": "Refunds",
+                    "content": [
+                        "Refunds will be processed within 7 business days after receiving the returned item.",
+                        "Refund amount depends on the condition of the item.",
+                        "Full refund for unopened items in good condition.",
+                        "Partial refunds may apply if there are issues with the item.",
+                        "Refunds will be issued to the original payment method."
+                    ]
+                },
+                {
+                    "title": "Defective or Damaged Items",
+                    "content": [
+                        "Please contact us within 7 days of arrival if the item is damaged or defective.",
+                        "We will cover return shipping costs for defective or damaged items.",
+                        "We will offer an exchange or full refund."
+                    ]
+                },
+                {
+                    "title": "Return Process",
+                    "content": [
+                        "Please contact japan.anime.shoten@gmail.com.",
+                        "Include your order number, item name, and reason for return.",
+                        "We will provide the return address.",
+                        "Please ship the item back to us."
+                    ]
+                }
+            ]
+        },
+        "shipping": {
+            "title": "Shipping Policy",
+            "sections": [
+                {
+                    "title": "Shipping Methods",
+                    "content": [
+                        "We primarily use Japan Post International ePacket Light.",
+                        "Some items are shipped via EMS (Express Mail Service).",
+                        "All items come with a tracking number."
+                    ]
+                },
+                {
+                    "title": "Shipping Time",
+                    "content": [
+                        "Orders are shipped within 5-7 business days after confirmation.",
+                        "Delivery usually takes 7-16 days after shipment.",
+                        "Delivery items may vary depending on the destination country or region.",
+                        "Delays may occur during busy seasons or due to customs inspections."
+                    ]
+                },
+                {
+                    "title": "Tracking",
+                    "content": [
+                        "A tracking number will be sent via email after shipment.",
+                        "You can check the status via Japan Post Tracking Service.",
+                        "Tracking is also available via your local postal service."
+                    ]
+                },
+                {
+                    "title": "Shipping Cost",
+                    "content": [
+                        "Shipping costs are included in all product prices.",
+                        "Shipping will be displayed as 0 JPY at checkout."
+                    ]
+                },
+                {
+                    "title": "Shipping Destinations",
+                    "content": [
+                        "We currently ship to the following countries/regions:",
+                        "USA, Canada, UK, France, Germany, Italy, Spain",
+                        "Taiwan, China, South Korea, Thailand, Singapore",
+                        "Please contact us for shipping to other countries."
+                    ]
+                },
+                {
+                    "title": "Customs & Import Taxes",
+                    "content": [
+                        "Customs duties or import taxes may apply depending on the destination country.",
+                        "Customers are responsible for any customs and import taxes.",
+                        "Amounts vary by country regulations."
+                    ]
+                },
+                {
+                    "title": "Undeliverable Items",
+                    "content": [
+                        "Items returned due to unknown address or refusal of receipt will be returned to us.",
+                        "Additional shipping fees are required for reshipment.",
+                        "This also applies to returns due to long-term absence."
+                    ]
+                },
+                {
+                    "title": "Shipping Inquiries",
+                    "content": [
+                        "Please contact japan.anime.shoten@gmail.com.",
+                        "Include your tracking number and order number."
+                    ]
+                }
+            ]
+        },
+        "privacy": {
+            "title": "Privacy Policy",
+            "sections": [
+                {
+                    "title": "Information Collection",
+                    "content": [
+                        "We collect the following personal information:",
+                        "Name, email address, shipping address, phone number",
+                        "Order history, payment information",
+                        "This is used solely for order processing and shipping."
+                    ]
+                },
+                {
+                    "title": "Use of Information",
+                    "content": [
+                        "Shipping and delivery of products",
+                        "Order confirmation and notifications",
+                        "Responding to inquiries",
+                        "Improving services (as statistical data)"
+                    ]
+                },
+                {
+                    "title": "Third-Party Provision",
+                    "content": [
+                        "We provide necessary information to shipping carriers (Japan Post).",
+                        "We provide necessary information to payment processors (Shopify).",
+                        "We do not provide information to third parties unless required by law."
+                    ]
+                },
+                {
+                    "title": "Information Protection",
+                    "content": [
+                        "We implement appropriate security measures.",
+                        "We use SSL encryption.",
+                        "We prevent unauthorized access, loss, destruction, and falsification."
+                    ]
+                },
+                {
+                    "title": "Use of Cookies",
+                    "content": [
+                        "We use cookies to improve site functionality.",
+                        "You can disable cookies in your browser settings.",
+                        "Some functions may not work if cookies are disabled."
+                    ]
+                },
+                {
+                    "title": "Disclosure, Correction, Deletion",
+                    "content": [
+                        "Please contact us if you wish to disclose your personal information.",
+                        "We also handle requests for correction or deletion.",
+                        "Contact: japan.anime.shoten@gmail.com"
+                    ]
+                },
+                {
+                    "title": "Policy Changes",
+                    "content": [
+                        "This policy is subject to change without notice.",
+                        "Changes will be posted on the website."
+                    ]
+                }
+            ]
+        },
+        "terms": {
+            "title": "Terms of Service",
+            "sections": [
+                {
+                    "title": "Service Usage",
+                    "content": [
+                        "By using this site, you agree to these terms.",
+                        "Minors require parental consent.",
+                        "Registering false information is prohibited."
+                    ]
+                },
+                {
+                    "title": "Products",
+                    "content": [
+                        "All products are authentic.",
+                        "Product images may differ slightly in color from the actual item.",
+                        "Product specifications are subject to change without notice.",
+                        "Orders may be cancelled depending on stock availability."
+                    ]
+                },
+                {
+                    "title": "Pricing & Payment",
+                    "content": [
+                        "Displayed prices include all costs (product price + shipping).",
+                        "Prices are subject to change without notice.",
+                        "Payments are processed via Shopify.",
+                        "Credit cards, PayPal, etc. are accepted."
+                    ]
+                },
+                {
+                    "title": "Cancellations",
+                    "content": [
+                        "Cancellations are possible before shipment.",
+                        "Please contact japan.anime.shoten@gmail.com.",
+                        "Cancellations after shipment are not accepted.",
+                        "Please follow the return policy for returns."
+                    ]
+                },
+                {
+                    "title": "Prohibited Acts",
+                    "content": [
+                        "Orders using false information.",
+                        "Acts that cause trouble to other customers or our store.",
+                        "Acts violating laws and regulations.",
+                        "We may cancel orders if these apply."
+                    ]
+                },
+                {
+                    "title": "Disclaimer",
+                    "content": [
+                        "We are not responsible for shipping delays.",
+                        "We are not responsible for confiscation or damage at customs.",
+                        "Products may not work properly depending on your environment.",
+                        "We are not responsible for damages caused by natural disasters or force majeure."
+                    ]
+                },
+                {
+                    "title": "Intellectual Property",
+                    "content": [
+                        "Copyright of content on this site belongs to us or the rights holders.",
+                        "Unauthorized reproduction, duplication, or modification is prohibited.",
+                        "Unauthorized use of product images is prohibited."
+                    ]
+                },
+                {
+                    "title": "Governing Law & Jurisdiction",
+                    "content": [
+                        "These terms are governed by Japanese law.",
+                        "The Osaka District Court shall be the exclusive agreed court of jurisdiction for any disputes."
+                    ]
+                },
+                {
+                    "title": "Changes to Terms",
+                    "content": [
+                        "These terms are subject to change without notice.",
+                        "Changes will be posted on the website.",
+                        "Continued use after changes implies agreement to the new terms."
+                    ]
+                },
+                {
+                    "title": "Inquiries",
+                    "content": [
+                        "Please contact japan.anime.shoten@gmail.com for any questions."
+                    ]
+                }
+            ]
+        },
+        "legal": {
+            "title": "Legal Notice (Tokutei Shotorihiki Ho)",
+            "sections": [
+                {
+                    "title": "Distributor",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "Operation Manager",
+                    "content": [
+                        "Japan Anime Shoten"
+                    ]
+                },
+                {
+                    "title": "Location",
+                    "content": [
+                        "Osaka, Osaka Prefecture, Japan",
+                        "Detailed address will be disclosed without delay upon request."
+                    ]
+                },
+                {
+                    "title": "Contact",
+                    "content": [
+                        "Email: japan.anime.shoten@gmail.com",
+                        "Business Hours: Weekdays 10:00-18:00",
+                        "Closed: Weekends and Japanese National Holidays"
+                    ]
+                },
+                {
+                    "title": "Selling Price",
+                    "content": [
+                        "Displayed on each product page.",
+                        "Prices include shipping fees.",
+                        "All prices include tax."
+                    ]
+                },
+                {
+                    "title": "Payment Methods",
+                    "content": [
+                        "Credit Cards (Visa, Mastercard, American Express, etc.)",
+                        "PayPal",
+                        "Apple Pay",
+                        "Google Pay",
+                        "Other payment methods supported by Shopify"
+                    ]
+                },
+                {
+                    "title": "Payment Timing",
+                    "content": [
+                        "Payment is processed at the time of order confirmation.",
+                        "Credit card payments follow the terms of each card company."
+                    ]
+                },
+                {
+                    "title": "Delivery Timing",
+                    "content": [
+                        "Shipped within 1-3 business days after order confirmation.",
+                        "Usually delivered in 7-12 days after shipment.",
+                        "May vary depending on destination and item."
+                    ]
+                },
+                {
+                    "title": "Returns & Exchanges",
+                    "content": [
+                        "Please check the Return Policy.",
+                        "Contact us within 7 days of arrival.",
+                        "Only unopened items are returnable."
+                    ]
+                },
+                {
+                    "title": "Cancellations",
+                    "content": [
+                        "Possible before shipment.",
+                        "Please contact japan.anime.shoten@gmail.com."
+                    ]
+                }
+            ]
+        }
+    },
     "footer_copyright": "© 2026 Japan Anime Shoten. All rights reserved."
 }
